--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,14 @@ jobs:
       run: |
         sudo apt update
         sudo apt -y install build-essential tree
-        sudo cpan install Data::Table::Text ISO639
+
+        - name: InstallDataTableText
+      run: |
+        sudo cpan install Data::Table::Text
+    - name: InstallISO639
+      run: |
+        sudo cpan install ISO639
+
 
     - name: Test
       run: |
